--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     var i2r_no2_font = "bolder"; //lighter
     var i2r_text = "DE | Okt 15 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var i2r_link = "https://advancedstudies.unibas.ch/courses/course/einfuehrung-in-die-moderne-datenanalyse-mit-r-webinar-272005#collapsible-heading-anmeldung"
-    var i2r_font = "bolder"; //lighter
+    var i2r_font = "lighter"; //lighter
     var expl_text = "DE | Sep 24/25 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var expl_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/explorative-datenanalyse-mit-r-webinar-272006#collapsible-heading-anmeldung"
     var expl_font = "bolder";
