--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     var i2r_text = "DE | Okt 15 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var i2r_link = "https://advancedstudies.unibas.ch/courses/course/einfuehrung-in-die-moderne-datenanalyse-mit-r-webinar-272005#collapsible-heading-anmeldung"
     var i2r_font = "bolder"; //lighter
-    var expl_text = "DE | Sep 24/25 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
-    var expl_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/explorative-datenanalyse-mit-r-webinar-272006#collapsible-heading-anmeldung"
-    var expl_font = "bolder";
+    var expl_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
+    var expl_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Explorative Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Explorative Datenanalyse mit R' im Frühjar 2022."
+    var expl_font = "lighter";
     var stat_text = "DE | Oct 22/23 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var stat_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/statistik-mit-r-webinar-233189#collapsible-heading-anmeldung"
     var stat_font = "bolder";
@@ -1769,6 +1769,7 @@
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/0.png" alt="">
                 <h4  style="padding:0px;margin:0px">Einführung in die moderne Datenanalyse mit R</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Starte deine Reise in die Welt der Datenanalyse mit R</p>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2021Aug/">August 2021 | 1/2 Tag</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2021Mar/">März 2021 | 1/2 Tag</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2021Feb/">Februar 2021 | 1/2 Tag</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2020Oct/">Oktober 2020 | 1/2 Tag</a><br>
@@ -1782,6 +1783,7 @@
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/1.png" alt="">
                 <h4  style="padding:0px;margin:0px">Explorative Datenanalyse mit R</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Exploriere und visualisiere Daten mit R</p>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/EDA_2021Sep/">September 2021 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/EDA_2021Mar/">März 2021 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/EDA_2020Sep/">September 2020 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/EDA_2020Feb/">February 2020 | 2 Tage</a><br>
