--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     var i2r_no2_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var i2r_no2_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Einführung in die moderne Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' im Frühjar 2022."
     var i2r_no2_font = "lighter"; //lighter
-    var i2r_text = "DE | Okt 15 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
+    var i2r_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var i2r_link = "https://advancedstudies.unibas.ch/courses/course/einfuehrung-in-die-moderne-datenanalyse-mit-r-webinar-272005#collapsible-heading-anmeldung"
-    var i2r_font = "bolder"; //lighter
+    var i2r_font = "lighter"; //lighter
     var expl_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
-    var expl_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Explorative Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Explorative Datenanalyse mit R' im Frühjar 2022."
+    var expl_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Einführung in die moderne Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' im Frühjar 2022."
     var expl_font = "lighter";
     var stat_text = "DE | Oct 22/23 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var stat_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/statistik-mit-r-webinar-233189#collapsible-heading-anmeldung"
@@ -1769,6 +1769,7 @@
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/0.png" alt="">
                 <h4  style="padding:0px;margin:0px">Einführung in die moderne Datenanalyse mit R</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Starte deine Reise in die Welt der Datenanalyse mit R</p>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2021Oct/">Oktober 2021 | 1/2 Tag</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2021Aug/">August 2021 | 1/2 Tag</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2021Mar/">März 2021 | 1/2 Tag</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2021Feb/">Februar 2021 | 1/2 Tag</a><br>
