--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     var expl_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var expl_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Einführung in die moderne Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' im Frühjar 2022."
     var expl_font = "lighter";
-    var stat_text = "DE | Oct 22/23 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
-    var stat_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/statistik-mit-r-webinar-233189#collapsible-heading-anmeldung"
-    var stat_font = "bolder";
+    var stat_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
+    var stat_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Einführung in die moderne Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Statistik mit R' im Frühjar 2022."
+    var stat_font = "lighter";
     var ml_text = "DE | Nov 19/20 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var ml_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/maschinelles-lernen-mit-r-272008#collapsible-heading-anmeldung"
     var ml_font = "bolder";
@@ -1798,6 +1798,7 @@
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/2.png" alt="">
                 <h4  style="padding:0px;margin:0px">Statistik mit R</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Triff datenbasierte Entscheidungen mit R</p>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/SmR_2021Oct/">Oktober 2021 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/SmR_2021Apr/">April 2021 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/SmR_2020Sep/">September 2020 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/SmR_2020Mai/">Mai 2020 | 2 Tage</a><br>
