--- a/index.html
+++ b/index.html
@@ -1032,12 +1032,12 @@
                   <tr>
                     <td class="time">0900</td>
                     <td><a href="https://therbootcamp.github.io/EDA_2021Sep/_sessions/Welcome/Welcome.html">Willkommen</a></td>
-                    <td><a href="https://therbootcamp.github.io/EDA_2021Sep/_sessions/Recap/Recap.html">Rückblick</a></td>
+                    <td><a href="">Rückblick</a></td>
                   </tr>
                   <tr>
                     <td class="time">0930</td>
-                    <td><a href="https://therbootcamp.github.io/EDA_2021Sep/_sessions/IntroToR/IntroToR.html">Einführung in R</a></td>
-                    <td><a href="https://therbootcamp.github.io/EDA_2021Sep/_sessions/Analysing/Analysing.html">Analyse</a> <a href="https://therbootcamp.github.io/EDA_2021Feb/_sessions/Analysing/Analysing_practical.html">+</a></td>
+                    <td><a href="https://therbootcamp.github.io/EDA_2021Sep/_sessions/Data/Data.html">Daten</a> <a href="https://therbootcamp.github.io/EDA_2021Feb/_sessions/Data/Data_practical.html">+</a></td>
+                    <td><a href="https://therbootcamp.github.io/EDA_2021Sep/_sessions/Plotting/Plotting.html">Plottig I</a> <a href="https://therbootcamp.github.io/EDA_2021Feb/_sessions/Plotting/Plotting_practical.html">+</a></td>
                   </tr>
                   <tr>
                     <td class="time">1200</td>
@@ -1046,13 +1046,13 @@
                   </tr>
                   <tr>
                     <td class="time">1300</td>
-                    <td><a href="https://therbootcamp.github.io/EDA_2021Sep/_sessions/Wrangling/Wrangling.html">Daten</a> <a href="https://therbootcamp.github.io/EDA_2021Feb/_sessions/Data/Data_practical.html">+</a></td>
-                    <td><a href="https://therbootcamp.github.io/EDA_2021Sep/_sessions/Plotting/Plotting.html">Visualisierung</a> <a href="https://therbootcamp.github.io/EDA_2021Feb/_sessions/Wrangling/Wrangling_practical.html">+</a></td>
+                    <td><a href="https://therbootcamp.github.io/EDA_2021Sep/_sessions/Wrangling/Wrangling.html">Wrangling I</a> <a href="https://therbootcamp.github.io/EDA_2021Feb/_sessions/Wrangling/Wrangling_practical.html">+</a></td>
+                    <td><a href="https://therbootcamp.github.io/EDA_2021Sep/_sessions/PlottingII/PlottingII.html">Plottig II</a> <a href="https://therbootcamp.github.io/EDA_2021Feb/_sessions/PlottingII/PlottingII_practical.html">+</a></td>
                   </tr>
                   <tr>
                     <td class="time">1530</td>
-                    <td><a href="https://therbootcamp.github.io/EDA_2021Sep/_sessions/Wrangling/Wrangling.html">Wrangling</a> <a href="https://therbootcamp.github.io/EDA_2021Feb/_sessions/Plotting/Plotting_practical.html">+</a></td>
-                    <td><a href="https://therbootcamp.github.io/EDA_2021Sep/_sessions/CaseStudies/CaseStudies.html">Fallstudien</a>: <a href="https://therbootcamp.github.io/EDA_2021Feb/_sessions/CaseStudies/Clinical_Data_Case_Study.html">I</a>, <a href="https://therbootcamp.github.io/R4DS_2019Feb/_sessions/CaseStudies/Financial_Data_Case_Study.html">II</a></td>
+                    <td><a href="https://therbootcamp.github.io/EDA_2021Sep/_sessions/WranglingII/WranglingII.html">Wrangling II</a> <a href="https://therbootcamp.github.io/EDA_2021Feb/_sessions/WranglingII/WranglingII_practical.html">+</a></td>
+                    <td><a href="https://therbootcamp.github.io/EDA_2021Sep/_sessions/PlottingIII/PlottingIII.html">Plottig III</a>: <a href="https://therbootcamp.github.io/EDA_2021Feb/_sessions/PlottingIII/PlottingIII.html">+</a></td>
                   </tr>
                   <tr>
                     <td class="time">1745</td>
@@ -1159,7 +1159,7 @@
                   <tr>
                     <td class="time">0930</td>
                     <td><a href="https://therbootcamp.github.io/SwR_2021Oct/_sessions/Intro2Stats/Intro2Stats.html">Einführung in Statistik</a> </td>
-                    <td><a href="https://therbootcamp.github.io/SwR_2021Oct/_sessions/LinearModelsIII/LinearModelsIII.html">Hierarchische Modelle</a> <a href="https://therbootcamp.github.io/SwR_2021Oct/_sessions/LinearModelsIII/LinearModelsIII_practical.html">+</a></td>
+                    <td><a href="https://therbootcamp.github.io/SwR_2021Oct/_sessions/LinearModelsIII/LinearModelsIII.html">Lineare Modelle III</a> <a href="https://therbootcamp.github.io/SwR_2021Oct/_sessions/LinearModelsIII/LinearModelsIII_practical.html">+</a></td>
                   </tr>
                   <tr>
                     <td class="time">1200</td>
@@ -1372,7 +1372,7 @@
                   </tr>
                   <tr>
                     <td class="elem">Gruppengrösse</td>
-                    <td>Max. 18 Teilnehmende</td>
+                    <td>Max. 20 Teilnehmende</td>
                   </tr>
                   <tr>
                     <td class="elem">Preis</td>
