--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
     var i2r_no2_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var i2r_no2_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Einführung in die moderne Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' im Herbst 2022."
     var i2r_no2_font = "lighter"; //lighter
-    var i2r_text = "DE | Apr 8 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
-    var i2r_link = "https://advancedstudies.unibas.ch/courses/course/einfuehrung-in-die-moderne-datenanalyse-mit-r-webinar-272005#collapsible-heading-anmeldung"
-    var i2r_font = "bolder"; //lighter
+    var i2r_text = "DE | tba | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
+    var i2r_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Einführung in die moderne Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Einführung in die moderne Datenanalyse mit R' im Herbst 2022."
+    var i2r_font = "lighter"; //lighter
     var expl_text = "DE | tba | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
-    var expl_link = "hmailto:therbootcamp@gmail.com?subject=Voranmeldung für Explorative Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Explorative Datenanalyse mit R' im Herbst 2022."
+    var expl_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Explorative Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Explorative Datenanalyse mit R' im Herbst 2022."
     var expl_font = "lighter";
-    var stat_text = "DE | Apr 22/23 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
+    var stat_text = "DE | Mai 23/24 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var stat_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/statistik-mit-r-webinar-233189#collapsible-heading-anmeldung"
     var stat_font = "bolder";
-    var ml_text = "DE | Mai 13/14 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
-    var ml_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/maschinelles-lernen-mit-r-272008#collapsible-heading-anmeldung"
-    var ml_font = "bolder";
-    var rep_text = "DE | tba | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
-    var rep_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldug für Reporting mit R&amp;body=Ich möchte mich für das nächste R Bootcamp 'Reporting mit R' voranmelden."
-    var rep_font = "lighter";
+    var ml_text = "DE | tba | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
+    var ml_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Maschinelles Lernen mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Maschinelles Lernen mit R' im Herbst 2022."
+    var ml_font = "lighter";
+    var rep_text = "DE | Jun 10 | Voranmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
+    var rep_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/reporting-with-r-webinar-283873#collapsible-heading-anmeldung"
+    var rep_font = "bolder";
 
     // running link
     var run_link = "https://therbootcamp.github.io/RmR_2020Jun/"
