--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     var expl_text = "DE | tba | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var expl_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Explorative Datenanalyse mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Explorative Datenanalyse mit R' im Herbst 2022."
     var expl_font = "lighter";
-    var stat_text = "DE | Mai 23/24 | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
-    var stat_link = "https://advancedstudies.unibas.ch/studienangebot/kurs/statistik-mit-r-webinar-233189#collapsible-heading-anmeldung"
-    var stat_font = "bolder";
+    var stat_text = "DE | tba | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
+    var stat_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Statistik mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Statistik mit R' im Herbst 2022."
+    var stat_font = "lighter";
     var ml_text = "DE | tba | Anmelden<p style='border-top: 1px solid #6c757d;margin-top:4px;margin-bottom:-2px'>Online Kurs</p>";
     var ml_link = "mailto:therbootcamp@gmail.com?subject=Voranmeldung für Maschinelles Lernen mit R&amp;body=Ich [NAME, ADRESSE] möchte mich für das nächste R Bootcamp 'Maschinelles Lernen mit R' im Herbst 2022."
     var ml_font = "lighter";
@@ -1769,7 +1769,8 @@
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/0.png" alt="">
                 <h4  style="padding:0px;margin:0px">Einführung in die moderne Datenanalyse mit R</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Starte deine Reise in die Welt der Datenanalyse mit R</p>
-                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2021Oct/">Februar 2022 | 1/2 Tag</a><br>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2022Apr/">April 2022 | 1/2 Tag</a><br>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2022Feb/">Februar 2022 | 1/2 Tag</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2021Oct/">Oktober 2021 | 1/2 Tag</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2021Aug/">August 2021 | 1/2 Tag</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/I2R_2021Mar/">März 2021 | 1/2 Tag</a><br>
@@ -1800,6 +1801,7 @@
                 <img class="img-fluid d-block mx-auto" style="margin-bottom:20px" src="img/courses/2.png" alt="">
                 <h4  style="padding:0px;margin:0px">Statistik mit R</h4>
                 <p class="item-intro text-muted" style="margin-bottom:20px">Triff datenbasierte Entscheidungen mit R</p>
+                <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/SmR_2022Apr/">April 2022 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/SmR_2021Oct/">Oktober 2021 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/SmR_2021Apr/">April 2021 | 2 Tage</a><br>
                 <a class="arxiv" target="_blank" href="https://therbootcamp.github.io/SmR_2020Sep/">September 2020 | 2 Tage</a><br>
