completed first translation of main website to french

--- a/fr.html
+++ b/fr.html
@@ -134,8 +134,8 @@
               <i class="fas fa-briefcase fa-stack-1x fa-inverse"></i>
             </span>
           </a>
-          <h4 class="service-heading">Consulting</h4>
-          <p class="text-muted">You have a Data Science problem? We might be able to help. Send us a <a class="js-scroll-trigger" href="#contact"><b>message</b></a> and we will get back to you right away.</p>
+          <h4 class="service-heading">Conseil</h4>
+          <p class="text-muted">Vous avez un problème de Data Science? Nous pourrions peut-être vous aider. Envoyez-nous un message <a class="js-scroll-trigger" href="#contact"><b>message</b></a> et nous vous répondrons rapidement.</p>
         </div>
         <div class="col-md-4">
           <a data-toggle="modal" href="#arxiv">
@@ -145,7 +145,7 @@
             </span>
           </a>
           <h4 class="service-heading">Code</h4>
-          <p class="text-muted">We are active R developers and share R's open philosophy. That's why you will find all our materials are <a data-toggle="modal" href="#arxiv"><b>publicly available</b></a> at all times.</p>
+          <p class="text-muted">Nous sommes des développeurs actifs de R et partageons la philosophie ouverte de R. C'est pourquoi vous trouverez tous nos matériaux toujours <a data-toggle="modal" href="#arxiv"><b>disponibles on-line</b></a>.</p>
         </div>
       </div>
     </div>
@@ -233,12 +233,8 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Cours à venir</h2>
-          <!---
-          <h3 class="section-subheading text-muted" style="margin:10px;font-size:1.5em"><i>For everyone!</i></h3>
-          <h3 class="section-subheading text-muted">Balancing short, interactive presentations and longer hands-on, step-by-step practicals our courses are designed to cater to your specific level and needs, may you be a beginner or advanced data analyst. There will be multiple instructors to ensure that no one gets lost. Feel to contact us, if you have questions, and explore our open materials.</h3>
-          --->
           <p class="text-muted" style="margin:0px;font-size:1.5em">Avec des applications dans tous les domaines professionels!</i></p>
-          <p class="text-muted">Balancing short, interactive presentations and longer hands-on, step-by-step practicals our courses are designed to cater to your specific level and needs, may you be a beginner or advanced data analyst. There will be multiple instructors to ensure that no one gets lost. Please contact us, if you have questions, and explore our open materials.</p><br><br><br>
+          <p class="text-muted">Équilibrant de courtes présentations interactives et des travaux pratiques plus longs, étape par étape, nos cours sont conçus pour répondre à votre niveau et à vos besoins spécifiques, que vous soyez un analyste de données débutant ou avancé. Il y aura plusieurs instructeurs pour s'assurer que personne ne se perd. N'hésitez pas à nous contacter si vous avez des questions et à explorer nos documents ouverts</p><br><br><br>
 
         </div>
       </div>
@@ -263,7 +259,7 @@
                       <i class="fas fa-plus fa-3x"></i>
                     </div>
                   </div>
-                  <p class="text-muted">Learn how to do data science using R from the ground-up. After the course, you will know how to load data from external files, clean, organise, and explore data, conduct basic statistical analyses and create striking visualisations.</p>
+                  <p class="text-muted">Apprenez à faire de la science des données en utilisant R à partir de zéro. Après le cours, vous saurez comment charger des données à partir de fichiers externes, nettoyer, organiser et explorer des données, effectuer des analyses statistiques de base et créer des visualisations saisissantes.</p>
                 </div>
                 </a>
                 <div class="timeline-dates">
@@ -290,7 +286,7 @@
                       <i class="fas fa-plus fa-3x"></i>
                     </div>
                   </div>
-                  <p class="text-muted">Learn how to make robust, actionable data-driven decisions from data using Statistics and R. After the course, you will be able to run various statistical tests and models, understand their assumptions and interpret their results.</p>
+                  <p class="text-muted">Découvrez comment prendre des décisions robustes basées sur des données, à l'aide de la statistique et de R. Après le cours, vous serez en mesure d'exécuter divers tests et modèles statistiques, de comprendre leurs hypothèses et d'interpréter leurs résultats.</p>
                   </a>
                 </div>
                 <div class="timeline-dates">
@@ -316,11 +312,12 @@
                       <i class="fas fa-plus fa-3x"></i>
                     </div>
                   </div>
-                  <p class="text-muted">Learn how to build predictive models using machine learning and R. After the course, you will understand the basics of machine learning and know how to apply various algorithms to solve common decision and forecasting problems. </p>
+                  <p class="text-muted">Découvrez comment créer des modèles prédictifs à l'aide de l'apprentissage automatique et de R. Après le cours, vous comprendrez les bases de l'apprentissage automatique et saurez comment appliquer divers algorithmes pour résoudre des problèmes courants de décision et de prévision. </p>
                   </a>
                 </div>
                 <div class="timeline-dates">
-                  <a class="date" href="https://advancedstudies.unibas.ch/courses/course/machine-learning-with-r-208291#collapsible-heading-anmeldung">Oct 5/6 | Register</a>
+                  <!--<a class="date" href="https://advancedstudies.unibas.ch/courses/course/machine-learning-with-r-208291#collapsible-heading-anmeldung">Oct 5/6 | Register</a>-->
+			<a class="pre-date" href="mailto:therbootcamp@gmail.com?subject=Preregistration for Machine Learning with R&amp;body=I would like to preregister for the next R Bootcamp 'Machine Learning with R'.">tba | Preregister</a>
                 </div>
               </div>
             </li>
@@ -356,7 +353,7 @@
             <li data-target="#myCarousel" data-slide-to="5" style="background-color:#6c757d"></li>
         </ol>
         <div class="carousel-inner col-lg-12 text-center" style="padding-bottom:100px;font-size:1em">
-           <h2 class="section-heading text-uppercase" style="margin-bottom:40px">What Participants say</h2>
+           <h2 class="section-heading text-uppercase" style="margin-bottom:40px">Témoignages</h2>
            <div class="carousel-item active">
                <p class="section-subheading text-muted">"Many thanks for the excellent course, I really learnt a lot. The documents were super useful and the examples really interesting. In addition you guys were all awesome, super helpful, engaging and the atmosphere was really stimulating."</p>
                <br><p class="text-muted"><b>BRUNO</b>, Head of Clinical Development</p>
@@ -601,7 +598,7 @@
               <div class="col-lg-12 text-center">
 
                 <div id="success"></div>
-                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Send Message</button>
+                <button id="sendMessageButton" class="btn btn-primary btn-xl text-uppercase" type="submit">Envoyer</button>
               </div>
 
             </div>
